crud funcionando
