# swagger_output.json
@@ -141,6 +141,138 @@
         ],
         "responses": {}
       }
+    },
+    "/veterinario": {
+      "post": {
+        "tags": [],
+        "description": "criar veterinario no banco de dados",
+        "parameters": [
+          {
+            "name": "post veterinario",
+            "in": "body",
+            "description": "New veterinarian values",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "example": "Tobias Cristovao"
+                },
+                "crmv": {
+                  "type": "string",
+                  "example": " 1234567"
+                },
+                "cpf": {
+                  "type": "string",
+                  "example": "12345678910"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "exemplo@exemplo.com"
+                },
+                "telefone": {
+                  "type": "string",
+                  "example": "(19) 99999-9999"
+                }
+              },
+              "required": [
+                "nome",
+                "crmv",
+                "cpf",
+                "email",
+                "telefone"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/veterinario/{id}": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
+      "put": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "put veterinario",
+            "in": "body",
+            "description": "update veterinarian values",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "example": "Tobias Cristovao"
+                },
+                "crmv": {
+                  "type": "string",
+                  "example": "1234567"
+                },
+                "cpf": {
+                  "type": "string",
+                  "example": "12345678910"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "exemplo@exemplo.com"
+                },
+                "telefone": {
+                  "type": "string",
+                  "example": "(19) 99999-9999"
+                }
+              },
+              "required": [
+                "nome",
+                "crmv",
+                "cpf",
+                "email",
+                "telefone"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
     }
   },
   "definitions": {}
